--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,3 +5,9 @@ edition = "2021"
 
 [dependencies]
 bevy = { version = "0.15.3", features = ["dynamic_linking"] }
+
+[profile.dev]
+opt-level = 1
+
+[profile.dev.package."*"]
+opt-level = 3
